--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
-.App {
+.container{
+  max-width: 1440px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
   text-align: center;
+  background-color: black;
+  color:white
 }
 
-.App-logo {
-  height: 40vmin;
+/* Home page */
+
+.homepage {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
+}
+.button{
+  min-width: 200px;
+  padding:16px 24px;
+  border:none;
+  border-radius:4px;
+  font-size:20px;
+  font-weight:bold;
+  transition: all 0.1s linear
+}
+.button:hover{
+  transform: scale(1.05);
+  cursor: pointer;
+}
+.play{
+  background-color:#0d6efd
+}
+.high-scores{
+  background-color:yellow
+}
+
+/* Quiz */
+.quiz{
+  color:white;
+  display:flex;
+  flex-direction:column;
+  gap: 20px;
+}
+.info-quiz{
+  display:flex;
+  justify-content:space-between;
+}
+.question{
+  display:flex;
+  flex-direction:column;
+  gap: 20px;
+}
+.answer{
+  display:flex;
+  flex-direction:column;
+  gap: 8px;
+}
+.choice{
+  display:flex;
+  gap: 16px;
+  padding:16px;
+  border-radius:4px;
+  background-color:#0d6efd;
+  transition: all 0.1s linear
+
+}
+.choice:hover{
+  transform: scale(1.01);
+  cursor: pointer;
+}
+.right-answer{
+  background-color: green;
+  pointer-events: none;
+}
+.wrong-answer{
+  background-color:red;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+/* End game */
+.end-game,.form-end{
+  display:flex;
+  flex-direction:column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap:8px
+}
+.input{
+  padding:12px 8px;
+  min-width: 200px;
+  border: none;
+  outline: none;
+}
+.progress{
+  margin-top: 8px;
+  width:100px ;
+  height:20px;
+  border: solid 2px #16ff26;
+  border-radius:50px;
+  overflow:hidden;
+}
+.progress-bar{
+height: 100%;
+background-color:#16ff26;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* leaderboard */
+.leader-board{
+  display:flex;
+  flex-direction:column;
+  gap: 8px;
 }
